--- a/.golangci.yml
+++ b/.golangci.yml
@@ -41,7 +41,7 @@ formatters:
     golines:
       # Target maximum line length.
       # Default: 100
-      max-len: 120
+      max-len: 80
 
 linters:
   enable:
@@ -151,7 +151,7 @@ linters:
     #- gosmopolitan # reports certain i18n/l10n anti-patterns in your Go codebase
     - grouper # analyzes expression groups
     - importas # enforces consistent import aliases
-    - lll # [replaced by golines] reports long lines
+    #- lll # [replaced by golines] reports long lines
     - maintidx # measures the maintainability index of each function
     - misspell # [useless] finds commonly misspelled English words in comments
     - nlreturn # [too strict and mostly code is not more readable] checks for a new line before return and branch statements to increase code clarity
