refactor: make exif more testable and refactor builders

--- a/internal/service/exif/exiftool.config
+++ b/internal/service/exif/exiftool.config
@@ -19,6 +19,15 @@
         FilmProcessLab => { },
         FilmScanner => { },
         LensFilter => { Groups => { 2 => 'Camera' } },
+        FlashMode => { Groups => { 2 => 'Camera' } },
+        ShootingMode => { Groups => { 2 => 'Camera' } },
+        AFMode => { Groups => { 2 => 'Camera' } },
+        FilmAdvanceMode => { Groups => { 2 => 'Camera' } },
+        MultipleExposure => { Groups => { 2 => 'Camera' } },
+        FilmLoadedDate => { },
+        BatteryLoadedDate => { },
+        ManualISO => { Groups => { 2 => 'Camera' } },
+        FilmISO => { Groups => { 2 => 'Camera' } },
     );
     1;
     
