--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,22 @@ jobs:
       with:
         go-version: '1.25.x'
 
-    - name: Display Go version
-      run: go version
+    - name: Install mockgen
+      run: go install go.uber.org/mock/mockgen@latest
 
-    - name: Build
-      run: go build ./...
+    - name: Verify dependencies are tidy
+      run: go mod tidy && git diff --exit-code go.mod go.sum
+
+    - name: Verify generated code is up-to-date
+      run: go generate ./... && git diff --exit-code
+
+    - name: Lint
+      uses: golangci/golangci-lint-action@v9
+      with:
+        version: latest
 
     - name: Test
       run: go test ./...
+
+    - name: Build
+      run: go build ./...
