--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         go-version: '1.25.x'
 
+    - name: Test
+      run: go test ./...
+
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v6
       with:
