ci: fix coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,9 @@ jobs:
         version: latest
 
     - name: Test
-      run: go test -coverprofile=coverage.out ./...
+      run: |
+        PKGS=$(go list ./... 2>/dev/null | grep -Ev '(/test|/mocks|/cmd$$|/tools/|/osfs$$|/osexec$$|^github\.com/ma-tf/meta1v$$)')
+        go test -race -covermode=count -coverprofile=coverage.out $PKGS
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
