--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         go-version: '1.25.x'
 
+    - name: Install mockgen
+      run: go install go.uber.org/mock/mockgen@latest
+
     - name: Test
       run: go test ./...
 
