--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Test
       run: go test ./...
 
+    - name: Install Syft
+      uses: anchore/sbom-action/download-syft@v0.22.2
+
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v6
       with:
