--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -49,7 +49,7 @@ checksum:
   algorithm: sha256
 
 sboms:
-  - artifacts: archive
+  - artifacts: source
     documents:
       - "{{ .ProjectName }}_{{ .Version }}_sbom.spdx.json"
 
