ci: modify changelog format

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -56,6 +56,7 @@ sboms:
 changelog:
   sort: asc
   use: github
+  format: "{{.SHA}}: {{.Message}}{{ if .Logins }} ({{ .Logins | englishJoin }}){{ end }}"
   filters:
     exclude:
       - '^docs:'
