--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -56,7 +56,7 @@ sboms:
 changelog:
   sort: asc
   use: github
-  format: "{{.SHA}}: {{.Message}}{{ if .Logins }} ({{ .Logins | englishJoin }}){{ end }}"
+  format: "{{.SHA}}: {{.Message}}{{with .Author.Username}} (@{{.}}){{end}}"
   filters:
     exclude:
       - '^docs:'
