ci: simplify changelog format

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -56,7 +56,7 @@ sboms:
 changelog:
   sort: asc
   use: github
-  format: "{{.SHA}}: {{.Message}}{{with .Author.Username}} (@{{.}}){{end}}"
+  format: "{{.SHA}}: {{.Message}}"
   filters:
     exclude:
       - '^docs:'
